--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Clean Architecture</title>
+    <title> <ME /> Portfolio </title>
   </head>
   <body>
     <div id="root"></div>
