--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="React Front End Developer.">
     <title> <ME /> Portfolio </title>
   </head>
   <body>
