--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en">mailto
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/fav4.svg" />
